--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <div class="popup" id="js-popup">
     <div class="popup-inner">
       <div class="close-btn" id="js-close-btn"><i class="fas fa-times"></i></div>
-      <p>ちづみ様のデザインカンプからコーディングした練習サイトです。</p>
+      <p>デザインカンプからコーディングした練習サイトです。</p>
     </div>
     <div class="black-background" id="js-black-bg"></div>
   </div>
